# tax_agent

./: README.md  config.yaml  main.py  model-config.yaml  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  auth.py  client.py  prompt.py  registry.py
mcp-server/: app.py  server.py  tools.py
mcp_server/: pyrightconfig.json  server.py  tools.py
strategy/: react.py  strat.md
test_data/: sample.txt
